--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -2,10 +2,15 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>title</title>
+    <title>Pig Latinizer</title>
   </head>
   <body>
-    <h1>Pig Latinizer</h1>
-  
+    <h1>Pig Latinizer!</h1>
+    <p>Enter your phrase:</p>
+    <form method ='post' action='/'>
+      <input type="text" name='user_phrase'>
+      <input id = "Submit" type="submit">
+    </form>
+
   </body>
 </html>
